NVIDIA Texture Tools version 2.0.9
 * Fix invalid assert when reading paletted TGA images. Fixes issue 125.
 * Add support for luminance flag. Fixes issue 126.
 * Fix the C wrapper and provide methods involving callbacks.
 * Improve C# / .NET Wrapper
 * Add an XNA Game Studio 3.1 Content Processor to make it easy to utilize NVIDIA Texture Tools in XNA applications.
 
NVIDIA Texture Tools version 2.0.8
 * Fix float to fixed image conversion. Patch provided by Alex Pfaffe. Fixes issue 121.
 * ColorBlock::isSingleColor compares only RGB channels. Fixes issue 115.
 * Fix cmake build in msvc. Fixes issue 111.
 * Better estimate principal component. Fixes issue 120.

NVIDIA Texture Tools version 2.0.7
 * Output correct exit codes. Fixes issue 92.
 * Fix thread-safety errors. Fixes issue 90.
 * Add SIMD power method. Fixes issue 94.
 * Fix compilation error in Snow Leopard reported by Huahang Liu.
 * Interact better with applications that already use CUDA.
 * Faster CPU compression.

NVIDIA Texture Tools version 2.0.6
 * Fix dll version checking.
 * Detect CUDA 2.1 and future CUDA versions correctly.
 * Print CUDA detection message in nvcompress.
 * Select the fastest CUDA device.
 * Compile squish with -fPIC. Fixes issue 74.
 * Fix warnings under gcc 4.3.2.
 * Fix nvzoom option typo by Frank Richter. Fixes issue 81.
 * Do not use CUDA to compress small mipmaps. Fixes issue 76.
 * Compute mipmaps of semi-transparent images correctly.
 * Shutdown CUDA properly. Fixes issue 83.
 * Fix pixel format converions. Fixes issue 87.
 * Update single color compression tables. Fixes issue 85.

NVIDIA Texture Tools version 2.0.5
 * Fix error in single color compressor. Fixes issue 66.
 * Detect mismatch between CUDA runtime and driver, and disable CUDA in that case.
 * Fix cmake files when compiling NVTT as a shared library.
 * When linking nvtt dynamically on unix, link all libraries dynamically.
 * Select fastest CUDA device.

NVIDIA Texture Tools version 2.0.4